setup github pages

--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,145 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+  color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.ar-flex-row {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  column-gap: 5%;
+  justify-content: center;
+  align-items: center;
+}
+
+.ar-flex-row-1 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  column-gap: 5%;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+p {
+  margin-left: 15px;
+}
+
+button {
+  color: white;
+  background-color: rgb(75,75,75);
+  border: none;
+  font-size: 18px;
+  margin-left: -2%
+
+
+}
+
+input {
+  border: none;
+  outline: none;
+  background-color: rgb(75, 75, 75);
+  color: white;
+  font-size: 16px;
+  padding: 7px 7px;
+  border-radius: 4px;
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: white;
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: white;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: white;
+}
+
+input[type=time] {
+  border: none;
+  color: #fff;
+  font-size: 16px;
+  font-family: helvetica;
+  width: 160px;
+}
+
+/* Wrapper around the hour, minute, second, and am/pm fields as well as 
+the up and down buttons and the 'X' button */
+input[type=time]::-webkit-datetime-edit-fields-wrapper {
+  display: flex;
+}
+
+/* The space between the fields - between hour and minute, the minute and 
+second, second and am/pm */
+input[type=time]::-webkit-datetime-edit-text {
+  padding: 5px 5px
+}
+
+/* The naming convention for the hour, minute, second, and am/pm field is
+`-webkit-datetime-edit-{field}-field` */
+
+/* Hour */
+input[type=time]::-webkit-datetime-edit-hour-field {
+  background-color: rgb(75,75,75);
+  color: white;
+  border-radius: 15%;
+  padding: 5px 5px
+}
+
+/* Minute */
+input[type=time]::-webkit-datetime-edit-minute-field {
+  background-color: rgb(75,75,75);
+  color: white;
+  border-radius: 15%;
+  padding: 5px 5px;
+  
+}
+
+/* AM/PM */
+input[type=time]::-webkit-datetime-edit-ampm-field {
+  background-color: rgb(75,75,75);
+  border-radius: 15%;
+  color: #fff;
+  padding: 5px 5px;
+}
+
+/* 'X' button for resetting/clearing time */
+input[type=time]::-webkit-clear-button {
+  display: none;
+}
+
+/* Up/Down arrows for incrementing/decrementing the value */
+input[type=time]::-webkit-inner-spin-button {
+  display: none;
+}
+
+input[type="time"]::-webkit-calendar-picker-indicator {
+  display: none;
+}
+
+.btn {
+  margin-top: 20px;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: rgb(78, 113, 81);
+}
+
+h2 {
+  text-align: center;
 }
